NAVBAR CAMBIADO "MI CUENTA"

--- a/MoviesFrontend/movies_Client/index.html
+++ b/MoviesFrontend/movies_Client/index.html
@@ -14,8 +14,8 @@
             <a href="index.html"><img src="imagenes/tuturismo.png" class="logo"></a>
             <ul class="nav-menu">
                 <li class="nav-menu-item"><a href="contacto.html" class="menu-link">BUSCAR</a></li>
-                
                 <li class="nav-menu-item"><a href=".html" class="menu-link">CARRITO</a></li>
+                <li class="nav-menu-item"><a href="contacto.html" class="menu-link">MI CUENTA</a></li>
             </ul>
         
         </nav>
