--- a/MoviesFrontend/movies_Client/index.html
+++ b/MoviesFrontend/movies_Client/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="nav">
             
-            <a href="index.html"><img src="imagenes/tuturismo.png" class="logo"></a>
+            <a href="index.html"><img src="src/Img/cinelogo.png" class="logo"></a>
             <ul class="nav-menu">
                 <li class="nav-menu-item"><a href="contacto.html" class="menu-link">BUSCAR</a></li>
                 <li class="nav-menu-item"><a href=".html" class="menu-link">CARRITO</a></li>
